@@ -95,6 +95,8 @@ INT_SETT_ASSIGN("DosymMinUniForAnchor", tsParam->dosymMinUniForAnchor)
 FLOAT_SETT_ASSIGN("DosymRunToEndAngle", tsParam->dosymRunToEndAngle)
 BOOL_SETT_ASSIGN("DosymSkipBacklash", tsParam->dosymSkipBacklash)
 FLOAT_SETT_ASSIGN("DosymStartingISLimit", tsParam->dosymStartingISLimit)
+BOOL_SETT_ASSIGN("DosymTrackBigReversal", tsParam->dosymTrackBigReversal)
+INT_SETT_ASSIGN("DosymBigTiltToTrack", tsParam->dosymBigTiltToTrack)
 FLOAT_SETT_ASSIGN("EndingTilt", tsParam->endingTilt)
 BOOL_SETT_ASSIGN("IntensitySetAtZero", tsParam->intensitySetAtZero)
 BOOL_SETT_ASSIGN("LimitToCurrent", tsParam->limitToCurrent)
