@@ -1463,6 +1463,10 @@ int CParameterIO::ReadSettings(CString strFileName, bool readingSys)
         mTSParam->dosymStartingISLimit = itemFlt[11];
         if (!itemEmpty[12])
           mTSParam->dosymSkipBacklash = itemInt[12] != 0;
+        if (!itemEmpty[14]) {
+          mTSParam->dosymTrackBigReversal = itemInt[13] != 0;
+          mTSParam->dosymBigTiltToTrack = itemInt[14];
+        }
 
       } else if (NAME_IS("TiltSeriesBDAnchorMags")) {
         for (index = 0; index < 6; index++)
@@ -2374,13 +2378,15 @@ void CParameterIO::WriteSettings(CString strFileName)
       mTSParam->bidirAngle, mTSParam->anchorBidirWithView ? 1 : 0, 
       mTSParam->walkBackForBidir ? 1 : 0, mTSParam->retainBidirAnchor ? 1 : 0);
     WriteString("TiltSeriesBidirParams", oneState);
-    oneState.Format("%d %d %d %f %d %d %d %f %d %d %f %d", mTSParam->doDoseSymmetric ? 
-      1 : 0, mTSParam->dosymBaseGroupSize, mTSParam->dosymIncreaseGroups ? 1 : 0,
+    oneState.Format("%d %d %d %f %d %d %d %f %d %d %f %d %d %d", 
+      mTSParam->doDoseSymmetric ? 1 : 0, mTSParam->dosymBaseGroupSize, 
+      mTSParam->dosymIncreaseGroups ? 1 : 0,
       mTSParam->dosymIncStartAngle, mTSParam->dosymGroupIncAmount, 
       mTSParam->dosymGroupIncInterval, mTSParam->dosymDoRunToEnd ? 1 : 0, 
       mTSParam->dosymRunToEndAngle, mTSParam->dosymAnchorIfRunToEnd ? 1 : 0,
       mTSParam->dosymMinUniForAnchor, mTSParam->dosymStartingISLimit, 
-      mTSParam->dosymSkipBacklash);
+      mTSParam->dosymSkipBacklash, mTSParam->dosymTrackBigReversal ? 1 : 0,
+      mTSParam->dosymBigTiltToTrack);
     WriteString("TiltSeriesDoseSymParams", oneState);
     WriteIndexedInts("TiltSeriesBDAnchorMags", mTSParam->bidirAnchorMagInd, 6);
     oneState.Format("%d %d %d", mWinApp->mTSController->GetRunMacroInTS() ? 1 : 0,
