@@ -31,7 +31,7 @@
           the text box is reached.&nbsp; This angle is relative to the initial angle of 
           the tilt series, which need not be zero and is specified in the angle text box 
           for the <strong>Run series in two directions from</strong>&#39; option of the main 
-          tilt series setup dialog.&nbsp; For exmaple, with an initial angle of 10 and an 
+          tilt series setup dialog.&nbsp; For example, with an initial angle of 10 and an 
           entry of 15 here, the groups would begin to increase in size at -5 and 25 
           degrees.</p>
       <p><strong>Increase group size by n every m degrees</strong></p>
@@ -56,6 +56,10 @@
           An anchor will also not be used if the first unidirectional segment is not 
           bigger than the largest alternating group size.&nbsp; Note that only View images 
           can be used for anchors, unlike for regular bidirectional series.</p>
+    <p><strong>Track when tilting by more than n degrees</strong></p>
+    <p>Select this option to force tracking every time the program tilts from one side 
+      of the series to the other by more than a specified amount, and enter the amount 
+      of tilt (not a tilt angle) in the text box.</p>
       <p><strong>Skip backlash tilt on second side of series</strong></p>
       <p>When this option is not selected, the program will do a tilt backlash step on the 
           second side of the series so that the stage is always tilted in one direction, 
